# midi2tcp4allenheath

./: .gitignore  .pylintrc  pyproject.toml  readme.rst  setup.cfg
debian/: changelog  control  copyright  rules
midi2tcp4allenheath/: __init__.py  discovery.py  main.py  server.py  utils.py
