[metadata]
name = midi2tcp4allenheath
author = s0600204
description = attr: midi2tcp4allenheath.__doc__
long_description = file: readme.rst
keywords = midi, theatre, allenheath

# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha

    Intended Audience :: Other Audience

    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio :: MIDI
    Topic :: Multimedia :: Sound/Audio :: Mixers

    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)

    Environment :: Console

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = find:
#~ include_package_data = True
python_requires = >= 3.8
install_requires =
    mido

[options.entry_points]
console_scripts =
    midi2tcp4allenheath = midi2tcp4allenheath.main:main
